# fast_ber

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  conanfile.py  conanfile.txt  generate.cmake
.github/workflows/: clang-format.yml
benchmarks/: CMakeLists.txt  ComponentPerformance.cpp  PerformanceTests.cpp
benchmarks/autogen/asn1c/: Child.c  Child.h  Collection.c  Collection.h  Makefile.am.sample
benchmarks/history/: results_v0.1-58-g8702e7b.txt  results_v0.1-69-g7d7c2a5.txt  results_v0.1-74-gad41f30-midway.txt  results_v0.1-74-gad41f30.txt  results_v0.1-81-g5f6d5b5.txt  results_v0.1.txt  results_v0.2-66-g08ff07a.txt  results_v0.2-73-gc6655d1.txt  results_v0.2.txt
cmake/: FastBerConfig.cmake.in  fast_ber_config.cmake.in  fast_ber_generate.cmake
include/fast_ber/ber_types/: All.hpp  Any.hpp  BMPString.hpp  BitString.hpp  Boolean.hpp  CharacterString.hpp  Choice.hpp  Class.hpp  Construction.hpp  Date.hpp  DateTime.hpp  Default.hpp  Duration.hpp  Enumerated.hpp  GeneralString.hpp  GeneralizedTime.hpp  GraphicString.hpp  IA5String.hpp  ISO646String.hpp  Identifier.hpp  Integer.hpp  Null.hpp  NumericString.hpp  ObjectIdentifier.hpp  OctetString.hpp  Optional.hpp  PrintableString.hpp  Real.hpp  Sequence.hpp  SequenceOf.hpp  SequenceOf.hpp.autosave  Set.hpp  SetOf.hpp  StringImpl.hpp  T61String.hpp  Tag.hpp  TaggedType.hpp  TeletexString.hpp  Time.hpp  TimeOfDay.hpp  (+5 more)
include/fast_ber/compiler/: CompilerTypes.hpp  CppGeneration.hpp  Dependencies.hpp  Identifier.hpp  Logging.hpp  ObjectClass.hpp  Parameters.hpp  ReorderAssignments.hpp  ResolveType.hpp  ResolveTypeFwd.hpp  TypeAsString.hpp
include/fast_ber/util/: Alias.hpp  BerContainer.hpp  BerLengthAndContentContainer.hpp  BerView.hpp  Create.hpp  Create.hpp.autosave  Decode.hpp  DecodeHelpers.hpp  DecodePrimitive.hpp  Definitions.hpp  DynamicOptional.hpp  DynamicVariant.hpp  DynamicVariantHelpers.hpp  Encode.hpp  EncodeHelpers.hpp  EncodeIdentifiers.hpp  EncodeResult.hpp  Error.hpp  Extract.hpp  FixedIdBerContainer.hpp  FixedTagBerContainer.hpp  Helpers.hpp  SmallFixedIdBerContainer.hpp
sample/: CMakeLists.txt
sample/decode/: main.cpp
sample/encode/: main.cpp
script/: do_clang_format.sh  log_benchmarks.sh
src/: CMakeLists.txt  asn1_sam.y  asn_compiler.yacc  compile_commands.json
src/ber_types/: Real.cpp
src/compiler/: CompilerMain.cpp  CompilerTypes.cpp  CppGeneration.cpp  DartConfiguration.tcl  Dependencies.cpp  EncodeDecode.cpp  GenerateChoice.cpp  GenerateHelpers.cpp  Identifier.cpp  ObjectClass.cpp  Parameters.cpp  ReorderAssignments.cpp  ResolveType.cpp  TypeAsString.cpp  TypeAsString.cpp.autosave  ValueAsString.cpp  ValueType.cpp  asn_compiler.yacc
src/compiler/autogen/: asn_compiler.hpp
src/compiler/autogen_copy/: asn_compiler.hpp
src/compiler/include/fast_ber/compiler/: CompilerTypes.hpp  CppGeneration.hpp  Dependencies.hpp  EncodeDecode.hpp  GenerateChoice.hpp  GenerateHelpers.hpp  Identifier.hpp  ReorderAssignments.hpp  ResolveType.hpp  TypeAsString.hpp  ValueAsString.hpp  ValueType.hpp  Visit.hpp
src/compiler_main/: CompilerMain.cpp
src/util/: BerView.cpp
src/view/: view.cpp
test/: CMakeLists.txt  ParseTest.cpp  Test.cpp  parse_test.cpp
test/ber_types/: AllTest.cpp  AnyTest.cpp  BooleanTest.cpp  ChoiceTest.cpp  ClassTest.cpp  ConstructionTest.cpp  DefaultTest.cpp  Enumerated.cpp  GeneralizedTime.cpp  IdentifierTest.cpp  IntegerTest.cpp  NullTest.cpp  ObjectIdentifierTest.cpp  OctetStringTest.cpp  RealTest.cpp  SequenceOfTest.cpp  TaggedType.cpp
test/compiler/: Anonymous.cpp  Circular.cpp  Circular.cpp2  DifferentTopLevelTypesTest.cpp  Enumeration.cpp  EnumerationTest.cpp  ImportTest.cpp  ObjectIdentifierTest.cpp  ParameterizedTypesTest.cpp  PrefixedTypesTest.cpp  RealSchema.cpp  RealSchemaTest.cpp  ReorderAssignmentsTest.cpp  Sequence.cpp  SequenceOf.cpp  SimpleCompilerOutputTest.cpp  TagsTest.cpp  TimeTest.cpp  ValueTest.cpp
test/compiler_logic/: ReorderAssignmentsTest.cpp
test/concepts/: IdentifierTest.cpp
test/performance/: PerformanceTests.cpp
test/util/: BerContainerTest.cpp  BerViewTest.cpp  CreateTest.cpp  DynamicVariantTest.cpp  EncodeIdentifier.cpp  ExtractTest.cpp
testfiles/: SGSN-CDR-def-v2009A.asn  all_types_test.asn  anonymous_members.asn  choice.asn  circular.asn  circular.asn2  class.asn  defaults.asn  embedded.asn  enumeration.asn  extension.asn  import.asn  integer.asn  multi_file_import_1.asn  multi_file_import_2.asn  object_identifier.asn  parameterized_types.asn  pokemon.asn  prefixed_types.asn  random_test_spec.asn  sequence.asn  sequence_of.asn  set.asn  simple0.asn  simple1.asn  simple2.asn  simple3.asn  simple4.asn  simple5.asn  tags.asn  tags.detail.hpp  time.asn  top_level_encodings.asn  value_assignment.asn
testfiles/ros/: Remote-Operations-Generic-ROS-PDUs.asn  Remote-Operations-Information-Objects-extensions.asn  Remote-Operations-Information-Objects.asn  Remote-Operations-Information-Useful-Definitions.asn
